# project_template

./: .env.examle  README.md  init-develop.sh
backend/: Cargo.toml  Dockerfile
backend/migrations/: create_products_table.sql
backend/src/: main.rs  routes.rs
backstage/: package-lock.json  package.json
compose_files/: compose.develop.yaml
dockerfiles/: Dockerfile.backend
frontend/: package-lock.json
